--- a/index.html
+++ b/index.html
@@ -11,6 +11,19 @@
   </head>
 
   <body>
-    <h1>현재는 서비스를 점검하고 있어요!</h1><h4>다음 주에 다시 서비스를 시작할게요!</h4>
+    <!--
+    <nav class="navback navbar">
+      <div class="logos">
+          <div class="logofont">Klaud™</div>
+          <div class="smallfnt">Connect. School with Students.</div>
+      </div>
+    </nav>
+  -->
+    <div class="mainpage centerpit">
+      <div class="bigmoji">🫠</div>
+      <div class="mt">점검을 하고있어요!</div><div class="subt">여러분께 더 나은 경험을 위해,<br>서비스를 개선하고 있어요!</div>
+      <br><br>
+      <a href="./Unknown.html"><u><div class="hylk">미리 체험해볼래요!</div></u></a>
+    </div>
   </body>
 </html>
