--- a/mealinfo.html
+++ b/mealinfo.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style/meal.css">
     <script src="script/GetMeal.js"></script>
     <script src="script/Pretty_Support.js"></script>
+    <link rel="preload" href="./style/font/PretendardVariable.woff2" as="font" type="font/woff2" crossorigin>
 
   </head>
   <body>
