--- a/timeinfo.html
+++ b/timeinfo.html
@@ -6,6 +6,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 
         <title>Klaud APP</title>
+
+        <link rel="preconnect" href="https://cdn.jsdelivr.net" />
+        <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin />
         <link rel="stylesheet" href="style/time.css">
     </head>
 
