--- a/mealinfo.html
+++ b/mealinfo.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 
     <title>Klaud APP</title>
+
+    <link rel="preconnect" href="https://cdn.jsdelivr.net" />
+    <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin />
     <link rel="stylesheet" href="style/meal.css">
     <script src="script/GetMeal.js"></script>
     <script src="script/Pretty_Support.js"></script>
