change filename & path

--- a/meal.html
+++ b/meal.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 
-    <title>Klaud APP</title>
+    <title>Klaud - 급식 정보</title>
 
     <link rel="preconnect" href="https://cdn.jsdelivr.net" />
     <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin />
     <link rel="stylesheet" href="style/meal.css">
-    <script src="script/GetMeal.js"></script>
-    <script src="script/Pretty_Support.js"></script>
+    <script src="script/meal/GetMeal.js"></script>
+    <script src="script/meal/Pretty_Support.js"></script>
 
   </head>
   <body>
