--- a/timetable.html
+++ b/timetable.html
@@ -5,11 +5,11 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 
-        <title>Klaud APP</title>
+        <title>Klaud - 시간표</title>
 
         <link rel="preconnect" href="https://cdn.jsdelivr.net" />
         <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin />
-        <link rel="stylesheet" href="style/time.css">
+        <link rel="stylesheet" href="style/timetable.css">
     </head>
 
     <body>
