--- a/timetable.html
+++ b/timetable.html
@@ -10,6 +10,7 @@
         <link rel="preconnect" href="https://cdn.jsdelivr.net" />
         <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin />
         <link rel="stylesheet" href="style/timetable.css">
+        <script src="script/timetable/parameter.js"></script>
     </head>
 
     <body>
