--- a/timetable.html
+++ b/timetable.html
@@ -14,7 +14,7 @@
     </head>
 
     <body>
-        <div class="title" id="title"></div>
+        <div class="titlex" id="titlex"></div>
 
         <table class="bd">
                 <th class="timetop toptime"></th>
