--- a/timetable.html
+++ b/timetable.html
@@ -80,5 +80,7 @@
                 <td class="nowtime">두번째 칸</td>
             </tr>
             </table>
+
+            <script>ax();</script>
     </body>
 </html>
