날짜에 따른 변화

--- a/timetable.html
+++ b/timetable.html
@@ -17,67 +17,67 @@
         <div class="titlex" id="titlex"></div>
 
         <table class="bd">
-                <th class="timetop toptime"></th>
-                <th class="timetop bottomtime">월</th>
-                <th class="timetop bottomtime">화</th>
-                <th class="timetop bottomtime">수</th>
-                <th class="timetop toptime">목</th>
-                <th class="timetop bottomtime">금</th>
+                <th class="timetop" id="times"></th>
+                <th class="timetop" id="times1">월</th>
+                <th class="timetop" id="times2">화</th>
+                <th class="timetop" id="times3">수</th>
+                <th class="timetop" id="times4">목</th>
+                <th class="timetop" id="times5">금</th>
             <tr>
                 <td class="timeside"> 1 </td>
-                <td class="nowtime">첫번째 칸</td>
-                <td class="nowtime">두번째 칸</td>
-                <td class="nowtime">첫번째 칸</td>
-                <td class="nowtime">두번째 칸</td>
-                <td class="nowtime">두번째 칸</td>
+                <td id="t11"></td>
+                <td id="t12"></td>
+                <td id="t13"></td>
+                <td id="t14"></td>
+                <td id="t15"></td>
             </tr>
             <tr>
                 <td class="timeside"> 2 </td>
-                <td class="nowtime">첫번째 칸</td>
-                <td class="nowtime">두번째 칸</td>
-                <td class="nowtime">첫번째 칸</td>
-                <td class="nowtime">두번째 칸</td>
-                <td class="nowtime">두번째 칸</td>
+                <td id="t21"></td>
+                <td id="t22"></td>
+                <td id="t23"></td>
+                <td id="t24"></td>
+                <td id="t25"></td>
             </tr>
             <tr>
                 <td class="timeside"> 3 </td>
-                <td class="nowtime">첫번째 칸</td>
-                <td class="nowtime">두번째 칸</td>
-                <td class="nowtime">첫번째 칸</td>
-                <td class="nowtime">두번째 칸</td>
-                <td class="nowtime">두번째 칸</td>
+                <td id="t31"></td>
+                <td id="t32"></td>
+                <td id="t33"></td>
+                <td id="t34"></td>
+                <td id="t35"></td>
             </tr>
             <tr>
                 <td class="timeside"> 4 </td>
-                <td class="nowtime">첫번째 칸</td>
-                <td class="nowtime">두번째 칸</td>
-                <td class="nowtime">첫번째 칸</td>
-                <td class="nowtime">두번째 칸</td>
-                <td class="nowtime">두번째 칸</td>
+                <td id="t41"></td>
+                <td id="t42"></td>
+                <td id="t43"></td>
+                <td id="t44"></td>
+                <td id="t45"></td>
             </tr>
             <tr>
                 <td class="timeside"> 5 </td>
-                <td class="nowtime">첫번째 칸</td>
-                <td class="nowtime">두번째 칸</td>
-                <td class="nowtime">첫번째 칸</td>
-                <td class="nowtime">두번째 칸</td>
-                <td class="nowtime">두번째 칸</td>
+                <td id="t51"></td>
+                <td id="t52"></td>
+                <td id="t53"></td>
+                <td id="t54"></td>
+                <td id="t55"></td>
             </tr>
             <tr>
                 <td class="timeside"> 6 </td>
-                <td class="nowtime">첫번째 칸</td>
-                <td class="nowtime">두번째 칸</td>
-                <td class="nowtime">첫번째 칸</td>
-                <td class="nowtime">두번째 칸</td>
-                <td class="nowtime">두번째 칸</td>
+                <td id="t61"></td>
+                <td id="t62"></td>
+                <td id="t63"></td>
+                <td id="t64"></td>
+                <td id="t65"></td>
             </tr>
             <tr>
                 <td class="timeside"> 7 </td>
-                <td class="nowtime">첫번째 칸</td>
-                <td class="nowtime">두번째 칸</td>
-                <td class="nowtime">첫번째 칸</td>
-                <td class="nowtime">두번째 칸</td>
-                <td class="nowtime">두번째 칸</td>
+                <td id="t71"></td>
+                <td id="t72"></td>
+                <td id="t73"></td>
+                <td id="t74"></td>
+                <td id="t75"></td>
             </tr>
             </table>
 
