시간표 표시를 직관적으로 변경

--- a/timetable.html
+++ b/timetable.html
@@ -25,59 +25,59 @@
                 <th class="timetop" id="times5">금</th>
             <tr>
                 <td class="timeside"> 1 </td>
-                <td id="t11"></td>
-                <td id="t12"></td>
-                <td id="t13"></td>
-                <td id="t14"></td>
-                <td id="t15"></td>
+                <td class="nowtime" id="t11">x</td>
+                <td class="nowtime" id="t12">x</td>
+                <td class="nowtime" id="t13">x</td>
+                <td class="nowtime" id="t14">x</td>
+                <td class="nowtime" id="t15">x</td>
             </tr>
             <tr>
                 <td class="timeside"> 2 </td>
-                <td id="t21"></td>
-                <td id="t22"></td>
-                <td id="t23"></td>
-                <td id="t24"></td>
-                <td id="t25"></td>
+                <td class="nowtime" id="t21">x</td>
+                <td class="nowtime" id="t22">x</td>
+                <td class="nowtime" id="t23">x</td>
+                <td class="nowtime" id="t24">x</td>
+                <td class="nowtime" id="t25">x</td>
             </tr>
             <tr>
                 <td class="timeside"> 3 </td>
-                <td id="t31"></td>
-                <td id="t32"></td>
-                <td id="t33"></td>
-                <td id="t34"></td>
-                <td id="t35"></td>
+                <td class="nowtime" id="t31">x</td>
+                <td class="nowtime" id="t32">x</td>
+                <td class="nowtime" id="t33">x</td>
+                <td class="nowtime" id="t34">x</td>
+                <td class="nowtime" id="t35">x</td>
             </tr>
             <tr>
                 <td class="timeside"> 4 </td>
-                <td id="t41"></td>
-                <td id="t42"></td>
-                <td id="t43"></td>
-                <td id="t44"></td>
-                <td id="t45"></td>
+                <td class="nowtime" id="t41">x</td>
+                <td class="nowtime" id="t42">x</td>
+                <td class="nowtime" id="t43">x</td>
+                <td class="nowtime" id="t44">x</td>
+                <td class="nowtime" id="t45">x</td>
             </tr>
             <tr>
                 <td class="timeside"> 5 </td>
-                <td id="t51"></td>
-                <td id="t52"></td>
-                <td id="t53"></td>
-                <td id="t54"></td>
-                <td id="t55"></td>
+                <td class="nowtime" id="t51">x</td>
+                <td class="nowtime" id="t52">x</td>
+                <td class="nowtime" id="t53">x</td>
+                <td class="nowtime" id="t54">x</td>
+                <td class="nowtime" id="t55">x</td>
             </tr>
             <tr>
                 <td class="timeside"> 6 </td>
-                <td id="t61"></td>
-                <td id="t62"></td>
-                <td id="t63"></td>
-                <td id="t64"></td>
-                <td id="t65"></td>
+                <td class="nowtime" id="t61">x</td>
+                <td class="nowtime" id="t62">x</td>
+                <td class="nowtime" id="t63">x</td>
+                <td class="nowtime" id="t64">x</td>
+                <td class="nowtime" id="t65">x</td>
             </tr>
             <tr>
                 <td class="timeside"> 7 </td>
-                <td id="t71"></td>
-                <td id="t72"></td>
-                <td id="t73"></td>
-                <td id="t74"></td>
-                <td id="t75"></td>
+                <td class="nowtime" id="t71">x</td>
+                <td class="nowtime" id="t72">x</td>
+                <td class="nowtime" id="t73">x</td>
+                <td class="nowtime" id="t74">x</td>
+                <td class="nowtime" id="t75">x</td>
             </tr>
             </table>
 
