테스트용 링크 추가

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
       <div class="bigmoji">🫠</div>
       <div class="mt">점검을 하고있어요!</div><div class="subt">여러분께 더 나은 경험을 위해,<br>서비스를 개선하고 있어요!</div>
       <br><br>
-      <a href="./404.html"><u><div class="hylk">미리 체험해볼래요!</div></u></a>
+      <a href="./404.html"><u><div class="hylk">미리 체험해볼래요!</div></u></a><br>
+      <div class="hylk"><a href="./meal.html">급식 정보</a>&nbsp&nbsp&nbsp&nbsp<a href="./timetable.html?grade=2&class=2">시간표</a></div>
     </div>
   </body>
 </html>
