--- a/timetable.html
+++ b/timetable.html
@@ -12,6 +12,7 @@
     <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin />
     <link rel="stylesheet" href="style/timetable.css">
     <script src="script/timetable/parameter.js"></script>
+    <script src="script/timetable/timetable.js"></script>
 </head>
 
 <body>
